Se agrega Spinner y cambios varios en información y estilos

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <li><a href="index.html#info-entradas">Entradas</a></li>
                 <li><a href="obras-y-sedes.html#obras">Obras</a></li>
                 <li><a href="obras-y-sedes.html#sedes">Sedes</a></li>
-                <li><a href="nosotros.html">Nosotres</a></li>
-                <li><a href="form.html#top">Sumate</a></li>
+                <li><a href="nosotros.html">Equipo</a></li>
+                <li><a href="form.html#top">Convocatoria</a></li>
                 <div class="nav-redes">
                     <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
                     <li><a href="https://www.facebook.com/TataPiriri" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
@@ -58,8 +58,8 @@
     <section id="int">
         <div class="d-flex align-items-center justify-content-center">
             <h4 class="px-1">Apoyan este festival</h4>
-            <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
-            <img class="px-1" src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Marca del Instituto Nacional del Teatro">
+            <img class="px-1 my-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+            <img class="px-1 my-1" src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Marca del Instituto Nacional del Teatro">
         </div>
     </section>
 
@@ -88,7 +88,7 @@
                                         Entrada General
                                     </span>
                                     <span class="price mt-2 pb-4 mb-3">
-                                        <span>$</span>8000
+                                        <span>$</span>9000
                                     </span>
                                     <span class="time mt-2">
                                         Sala del Círculo Médico - Eldorado
@@ -101,7 +101,7 @@
                                         Jubilados y Estudiantes
                                     </span>
                                     <span class="price mt-2 pb-4 mb-3">
-                                        <span>$</span>6000
+                                        <span>$</span>7000
                                     </span>
                                     <span class="time mt-2">
                                         Sala del Círculo Médico - Eldorado
@@ -114,7 +114,7 @@
                                         Estudiantes con <span>bono</span>
                                     </span>
                                     <span class="price mt-2 pb-4 mb-3">
-                                        <span>$</span>4000
+                                        <span>$</span>5000
                                     </span>
                                     <span class="time mt-2">
                                         Sala del Círculo Médico - Eldorado
@@ -154,17 +154,17 @@
             <div class="item-footer">
                 <div>
                     <p class="px-1">Estamos creciendo todos los años un poco más, <strong>escribinos</strong> si querés sumarte al festival.<br>
-                                                <a class="px-3 py-2" href="form.html"><i class="fa-regular fa-envelope px-1"></i>Comunicate</a>
+                                                <a class="px-3 py-2" href="form-team.html"><i class="fa-regular fa-envelope px-1"></i>Comunicate</a>
 
                     </p>
                 </div>
             </div>
             <div class="item-footer">
                 <div class="d-flex flex-column">
-                    <a class="px-1 mb-1" href="#inicio">Grupos y espectáculos</a>
-                    <a class="px-1 mb-1" href="#inicio">Quienes somos</a>
-                    <a class="px-1 mb-1" href="#inicio">Más festivales</a>
-                    <a class="px-1 mb-1" href="#inicio">Agradecimientos</a>
+                    <a class="px-1 mb-1" href="/obras-y-sedes.html">Grupos y espectáculos</a>
+                    <a class="px-1 mb-1" href="/nosotros.html">Quienes somos</a>
+                    <a class="px-1 mb-1" href="/nosotros.html#otros-festivales">Más festivales</a>
+                    <a class="px-1 mb-1" href="/index.html">Inicio</a>
                     <p class="px-1 mb-1">Por el momento, las entradas virtuales las vendemos por Whatsapp.</p>
                 </div>
             </div>
@@ -174,23 +174,19 @@
                 <p class="px-1">
                     Este festival cuenta con el apoyo del
                 </p>
-                <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
-                    <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
-                </a>
-                <img src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Logo de Municipalidad de Eldorado">
+                <div class="d-flex gap-1">
+                    <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
+                        <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+                    </a>
+                    <img src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Logo de Municipalidad de Eldorado">
+                </div>
             </div>
             <a class="prueba-gsap px-3 py-2" href="#top"><i class="fa-solid fa-angles-up px-1"></i></a>
         </div>
     </footer>
-    
-    <!-- <script src="js/custom.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script> -->
-    <!-- <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://unpkg.com/split-type"></script> -->
+
+
     <script type="module" src="./src/js/main.js"></script>
-    
 
 </body>
 </html>
