--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotres | Festival de Títeres</title>
+    <title>Equipo | Festival de Títeres</title>
 
     <!-- <link rel="stylesheet" href="/css/style.css"> -->
     <!-- <link rel="stylesheet" href="/css/css/bootstrap-grid.css"> -->
@@ -20,8 +20,8 @@
                 <li><a href="index.html#info-entradas">Entradas</a></li>
                 <li><a href="obras-y-sedes.html#obras">Obras</a></li>
                 <li><a href="obras-y-sedes.html#sedes">Sedes</a></li>
-                <li><a href="nosotros.html">Nosotres</a></li>
-                <li><a href="form.html#top">Sumate</a></li>
+                <li><a href="nosotros.html">Equipo</a></li>
+                <li><a href="form.html#top">Convocatoria</a></li>
                 <div class="nav-redes">
                     <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
                     <li><a href="https://www.facebook.com/TataPiriri" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
@@ -38,8 +38,8 @@
                 <h5>Omar Holz</h5>
                 <p>Organización</p>
                 <div>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a> -->
+                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a> -->
                 </div>
             </article>
             <article>
@@ -56,17 +56,17 @@
                 <h5>Naomi Holz</h5>
                 <p>Organización</p>
                 <div>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a> -->
                 </div>
             </article>
             <article>
-                <img src="assets/img/Perfil-Julian.png" alt="Perfil de Alejandro Rouel">
-                <h5>Alejandro Roel</h5>
+                <img src="assets/img/Perfil-Roel-Coronel.png" alt="Perfil de Alejandro Rouel">
+                <h5>Alejandro Roel Coronel</h5>
                 <p>Organización</p>
                 <div>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a> -->
                 </div>
             </article>
             <article>
@@ -74,8 +74,8 @@
                 <h5>Vanesa Reyes</h5>
                 <p>Organización</p>
                 <div>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a> -->
                 </div>
             </article>
             <article>
@@ -101,8 +101,8 @@
                 <h5>Nahuel Beck</h5>
                 <p>Diseño gráfico</p>
                 <div>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a> -->
                 </div>
             </article>
             <article>
@@ -110,10 +110,17 @@
                 <h5>Equipo Zona Norte</h5>
                 <p>Organización</p>
                 <div>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a> -->
                 </div>
             </article>
+            <!-- Sumate -->
+            <a href="/form-team.html" class="sumate-equipo">
+                <article>
+                    <img src="assets/img/Perfil-Usuario.png" alt="Sumate">
+                    <h5>Me quiero sumar al equipo</h5>
+                </article>
+            </a>
         </div>
         <div class="gente">
             <i class="fa-regular fa-heart fa-2xl"></i>
@@ -129,16 +136,16 @@
 
     <section id="otros-festivales">
         <p>Podés seguir viendo títeres</p>
-        <h2>Otros Festivales de Misiones</h2>
+        <h2>Otros Festivales del NEA</h2>
         <div class="festivales">
             <a href="https://www.instagram.com/tatavera.titeres/" target="_blank" rel="noopener noreferrer">
                 <img src="assets/img/2023-04-tata-vera-300x91.png" alt="Logo de Festival de Títeres Tatá Verá">
                 <p>Iguazú</p>
             </a>
-            <a href="https://www.facebook.com/festivaldetitereskruvikas/?locale=es_LA" target="_blank" rel="noopener noreferrer">
+            <!-- <a href="https://www.facebook.com/festivaldetitereskruvikas/?locale=es_LA" target="_blank" rel="noopener noreferrer">
                 <img src="assets/img/2023-04-Kruvikas-300x237.png" alt="Festival de Títeres Kruvicas">
                 <p>Posadas</p>
-            </a>
+            </a> -->
         </div>
     </section>
 
@@ -147,16 +154,17 @@
             <div class="item-footer">
                 <div>
                     <p class="px-1">Estamos creciendo todos los años un poco más, <strong>escribinos</strong> si querés sumarte al festival.<br>
-                    <a class="px-3 py-2" href="form.html"><i class="fa-regular fa-envelope px-1"></i>Comunicate</a>
+                                                <a class="px-3 py-2" href="form-team.html"><i class="fa-regular fa-envelope px-1"></i>Comunicate</a>
+
                     </p>
                 </div>
             </div>
             <div class="item-footer">
                 <div class="d-flex flex-column">
-                    <a class="px-1 mb-1" href="#inicio">Grupos y espectáculos</a>
-                    <a class="px-1 mb-1" href="#inicio">Quienes somos</a>
-                    <a class="px-1 mb-1" href="#inicio">Más festivales</a>
-                    <a class="px-1 mb-1" href="#inicio">Agradecimientos</a>
+                    <a class="px-1 mb-1" href="/obras-y-sedes.html">Grupos y espectáculos</a>
+                    <a class="px-1 mb-1" href="/nosotros.html">Quienes somos</a>
+                    <a class="px-1 mb-1" href="/nosotros.html#otros-festivales">Más festivales</a>
+                    <a class="px-1 mb-1" href="/index.html">Inicio</a>
                     <p class="px-1 mb-1">Por el momento, las entradas virtuales las vendemos por Whatsapp.</p>
                 </div>
             </div>
@@ -166,21 +174,19 @@
                 <p class="px-1">
                     Este festival cuenta con el apoyo del
                 </p>
-                <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
-                    <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
-                </a>
+                <div class="d-flex gap-1">
+                    <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
+                        <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+                    </a>
+                    <img src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Logo de Municipalidad de Eldorado">
+                </div>
             </div>
             <a class="prueba-gsap px-3 py-2" href="#top"><i class="fa-solid fa-angles-up px-1"></i></a>
         </div>
     </footer>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script> -->
-    <!-- <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script> -->
     <script src="https://unpkg.com/split-type"></script>
     <script type="module" src="./src/js/main.js"></script>
-    
-    <!-- <script src="js/custom.js"></script> -->
+
 </body>
 </html>
