Corrección de estilos

--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
 
     <section id="info-sedes">
         <!-- <h1>Sedes</h1> -->
+        <h5 id="card-horizontal-mobile">Estiramos los brazos para llegar bien lejos!</h5>
         <a href="obras-y-sedes.html#sedes">
-            <div class="card-horizontal d-flex">
+            <div class="card-horizontal">
                 <img src="/assets/img/Misiones-Mapa.png" alt="Mapa">
                 <div class="d-flex flex-column">
                     <h5>Estiramos los brazos para llegar bien lejos!</h5>
@@ -149,7 +150,7 @@
         </a>
     </section>
 
-    <footer class="d-flex justify-content-between">
+    <footer class="">
         <div class="d-flex">
             <div class="item-footer">
                 <div>
@@ -160,12 +161,12 @@
                 </div>
             </div>
             <div class="item-footer">
-                <div class="d-flex flex-column">
+                <div class="">
                     <a class="px-1 mb-1" href="/obras-y-sedes.html">Grupos y espectáculos</a>
                     <a class="px-1 mb-1" href="/nosotros.html">Quienes somos</a>
                     <a class="px-1 mb-1" href="/nosotros.html#otros-festivales">Más festivales</a>
                     <a class="px-1 mb-1" href="/index.html">Inicio</a>
-                    <p class="px-1 mb-1">Por el momento, las entradas virtuales las vendemos por Whatsapp.</p>
+                    <!-- <p class="px-1 mb-1">Por el momento, las entradas virtuales las vendemos por Whatsapp.</p> -->
                 </div>
             </div>
         </div>
@@ -174,7 +175,7 @@
                 <p class="px-1">
                     Este festival cuenta con el apoyo del
                 </p>
-                <div class="d-flex gap-1">
+                <div class="logos-footer">
                     <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
                         <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
                     </a>
