--- a/form.html
+++ b/form.html
@@ -108,7 +108,7 @@
 
 
 
-    <footer class="d-flex justify-content-between">
+    <footer>
         <div class="d-flex">
             <div class="item-footer">
                 <div>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="item-footer">
-                <div class="d-flex flex-column">
+                <div class="">
                     <a class="px-1 mb-1" href="/obras-y-sedes.html">Grupos y espectáculos</a>
                     <a class="px-1 mb-1" href="/nosotros.html">Quienes somos</a>
                     <a class="px-1 mb-1" href="/nosotros.html#otros-festivales">Más festivales</a>
