--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
 <body>
 
     <section id="top"></section>
+
+    <div class="toggle-container-mobile-menu">
+        <input type="checkbox" id="toggle">
+        <label for="toggle" class="button-toggle-mobile-menu"><i class="fas fa-bars"></i></label>
+        <nav class="nav-mobile-menu">
+            <a href="/index.html">
+                <img src="/public/assets/img/iso-solo.svg" alt="marca del festival">
+            </a>
+            <div>
+                <a href="index.html#info-programacion" class="nav-item-mobile-menu"><i class="fa-solid fa-clock"></i> Programación</a>
+                <a href="index.html#info-entradas" class="nav-item-mobile-menu"><i class="fa-solid fa-note-sticky"></i> Entradas</a>
+                <a href="obras-y-sedes.html#obras" class="nav-item-mobile-menu"><i class="fa-solid fa-star"></i> Obras</a>
+                <a href="obras-y-sedes.html#sedes" class="nav-item-mobile-menu"><i class="fa-solid fa-location-dot"></i> Sedes</a>
+                <a href="nosotros.html" class="nav-item-mobile-menu"><i class="fa-solid fa-circle-user"></i> Equipo</a>
+                <a href="form.html#top" class="nav-item-mobile-menu"><i class="fa-solid fa-address-card"></i> Convocatoria</a>
+                <div class="nav-redes">
+                    <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/TataPiriri" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                </div>
+            </div>
+        </nav>
+    </div>
+
     <section id="section-navegador">
         <nav id="navegador">
             <ul>
