--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
     <section id="info-entradas">
         <div class="section">	
-            <div class="container pt-5">
-                <div class="row justify-content-center">
+            <div class="container">
+                <div class="justify-content-center">
                     <div class="col-12 text-center">
                         <div class="d-flex justify-content-center align-items-center flex-column mb-4">
                             <h2>Entradas</h2>
