Corrección de uso de scroll horizontal Obras

--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -64,13 +64,15 @@
                 <div class="slider">
                     <article>
                         <div>
-                            <img src="/assets/img/portada-funcion-p2.jpg" alt="Obra">
+                            <img src="/assets/img/LaNiñaqueriegalaalbahacayelPríncipePreguntón.jpeg" alt="Obra">
                         </div>
                         <div class="info-obras">
-                            <h6>Colombia | Barranquilla</h6>
-                            <h4>Título de obras Título de obras</h4>
-                            <h6>Compañía Salsipuedes</h6>
-                            <p>Este va a ser un texto un cachito más largo que los otros. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                            <h6>Argentina | Buenos Aires</h6>
+                            <h4>La Niña que riega la albahaca y el Príncipe Preguntón</h4>
+                            <div class="d-flex gap-1 align-items-end">
+                                <i class="fa-solid fa-star"></i><h6>Compañia Teatral EL DESNIVEL</h6>
+                            </div>
+                            <p>La obra La niña que riega la albahaca y el príncipe preguntón, "viejo cuento andaluz en dos estampas y un cromo", es una obra escrita por Federico García Lorca para títeres de guante, La niña Irene y su padre, el zapatero don Gaiferos, viven frente al palacio del Príncipe. Ambos jóvenes, Irene y el Príncipe, entablan un juego de burlas y farsas, que nada puede contra el amor que entre ellos existe y que sin embargo intentan ocultar. En un último y feliz engaño, Irene se disfraza de Maga y cura al Príncipe, ya "muy mal herido, herido de amor, herido, herido, muerto de amor". Ambos se prometen en matrimonio bajo el brillo natural e inocente del sol y la luna.</p>
                         </div>
                     </article>
     
@@ -79,10 +81,12 @@
                             <img src="/assets/img/portada-funcion-p2.jpg" alt="Obra">
                         </div>
                         <div class="info-obras">
-                            <h6>País | Provincia</h6>
-                            <h4>Título 2</h4>
-                            <h6>Nombre de Grupos</h6>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                            <h6>Argentina | Buenos Aires</h6>
+                            <h4>La Niña que riega la albahaca y el Príncipe Preguntón</h4>
+                            <div class="d-flex gap-1 align-items-end">
+                                <i class="fa-solid fa-star"></i><h6>Compañia Teatral EL DESNIVEL</h6>
+                            </div>
+                            <p>La obra La niña que riega la albahaca y el príncipe preguntón, "viejo cuento andaluz en dos estampas y un cromo", es una obra escrita por Federico García Lorca para títeres de guante, La niña Irene y su padre, el zapatero don Gaiferos, viven frente al palacio del Príncipe. Ambos jóvenes, Irene y el Príncipe, entablan un juego de burlas y farsas, que nada puede contra el amor que entre ellos existe y que sin embargo intentan ocultar. En un último y feliz engaño, Irene se disfraza de Maga y cura al Príncipe, ya "muy mal herido, herido de amor, herido, herido, muerto de amor". Ambos se prometen en matrimonio bajo el brillo natural e inocente del sol y la luna.</p>
                         </div>
                     </article>
     
